--- a/Home_Page.html
+++ b/Home_Page.html
@@ -1,71 +1,67 @@
 <!DOCTYPE html>
-<html lang=\"zh-CN\">
+<html lang="zh-CN">
 <head>
-    <meta charset=\"UTF-8\">
-    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">
-    <title>ÂÖì±¼ì²âÊý×ÖÂÏÉúÆ½Ì¨ ¡¤ Ö÷Ò³</title>
-    <link rel=\"stylesheet\" href=\"css/common.css\">
-    <link rel=\"stylesheet\" href=\"css/homepage.css\">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>è½®æ¯‚æ£€æµ‹ç‰©è”ç½‘å¹³å° Â· é¦–é¡µ</title>
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/homepage.css">
 </head>
-<body class=\"page\">
-    <header class=\"topbar\">
-        <div class=\"brand\">
-            <span class=\"brand-circle\">W</span>
-            <span>ÂÖì±¼ì²âÊý×ÖÂÏÉúÆ½Ì¨</span>
+<body class="page">
+    <header class="topbar">
+        <div class="brand">
+            <span class="brand-circle">W</span>
+            <span>è½®æ¯‚æ£€æµ‹ç‰©è”ç½‘å¹³å°</span>
         </div>
-        <nav id=\"topNav\" class=\"nav\"></nav>
-        <div id=\"accountMenu\"></div>
+        <nav id="topNav" class="nav"></nav>
+        <div id="accountMenu"></div>
     </header>
 
-    <main class=\"page-content\">
-        <section class=\"card home-section\">
-            <div class=\"section-grid\">
-                <div class=\"section-media\">
-                    <img src=\"public/images/TianXiaWuShuang.png\" alt=\"ÂÖì±¼ì²âÉè±¸ÕûÌåÊ¾Òâ\">
-                </div>
-                <div class=\"section-text\">
-                    <h2>ÏîÄ¿¼ò½é</h2>
-                    <p>±¾ÏîÄ¿¾Û½¹¡°¶à¹¦ÄÜÂÖì±³ß´çÐÎ×´¼ì²âÒ»Ìå»¯Éè±¸¡±£¬ÕûºÏ´«ËÍ¡¢¶¨Î»¡¢¼Ð¾ß¡¢ÊÓ¾õ¼ÆËãÓë¿ÉÊÓ»¯Æ½Ì¨¹¹½¨×Ô¶¯»¯¼ì²âÁ´¡£´«ËÍÓë¶ÔÖÐ»ú¹¹½«ÂÖì±¾«×¼¶¨Î»£¬ÖÐÐÄ¼°²àÃæ¼Ð¾ß¸ºÔðÉý½µ¡¢Ðý×ªÓë·­×ª£¬ÊÓ¾õÏµÍ³²É¼¯¶àÊÓ½ÇÍ¼Ïñ²¢Ê¶±ð¹Ø¼ü³ß´ç£¬¼ì²â½á¹ûÊµÊ±Í¬²½ÖÁ¿ÉÊÓ»¯Æ½Ì¨£¬ÐÎ³ÉÍ³¼Æ¡¢¸æ¾¯Óë×·ËÝ±Õ»·¡£</p>
-                </div>
+    <main class="page-content">
+        <!-- HERO_START -->
+        <section class="hero card">
+            <img class="hero-img" src="/images/gongchang.png" alt="å·¥åŽ‚æ•°å­—åŒ–åœºæ™¯">
+            <div class="hero-text">
+                <h2>é¡¹ç›®æ¦‚è§ˆ</h2>
+                <p>é¡¹ç›®èšç„¦è½®æ¯‚å°ºå¯¸ä¸Žå½¢çŠ¶çš„å…¨æµç¨‹æ£€æµ‹ï¼Œæ•´åˆè‡ªåŠ¨ä¸Šæ–™ã€ç²¾å‡†å¯¹ä¸­ã€è§†è§‰è¯†åˆ«ã€æ•°æ®è¿½è¸ªæ¨¡å—ã€‚ç³»ç»Ÿé‡‡ç”¨æ¨¡å—åŒ–æž¶æž„ï¼Œæ”¯æŒå¿«é€Ÿåˆ‡æ¢è§„æ ¼ï¼Œå¹¶é€šè¿‡æ•°å­—å­ªç”Ÿå¹³å°å±•ç¤ºå®žæ—¶çŠ¶æ€ã€è¶‹åŠ¿ä¸Žè¿½æº¯ã€‚</p>
+                <p>å¹³å°é‡‡ç”¨æµ…è“ä½Žé¥±å’Œé£Žæ ¼ï¼Œæ•°æ®é¢æ¿ä¸Žä¸‰ç»´æ¨¡åž‹å¹¶åˆ—å‘ˆçŽ°ï¼Œä¿è¯ä¿¡æ¯å¯†åº¦ä¸Žå¯è¯»æ€§ï¼Œåœ¨ç”Ÿäº§ä¸Žæ¼”ç¤ºåœºæ™¯ä¸­å‡å¯ç¨³å®šè¿è¡Œã€‚</p>
             </div>
         </section>
+        <!-- HERO_END -->
 
-        <section class=\"card home-section\">
-            <div class=\"section-grid\">
-                <div class=\"section-media\">
-                    <img src=\"public/images/digital_bcgd.jpg\" alt=\"ÂÖì±¼ì²âÏßÑÐ¾¿Ä¿µÄ\">
-                </div>
-                <div class=\"section-text\">
-                    <h2>ÑÐ¾¿Ä¿µÄ</h2>
-                    <p>Ëæ×ÅÆû³µ±£ÓÐÁ¿³ÖÐøÅÊÉý£¬ÂÖì±¼¸ºÎ¾«¶ÈÖ±½Ó¹ØÏµ³µÁ¾ÐÐÊ»°²È«ÓëÂÖÌ¥ÊÙÃü¡£´«Í³ÈË¹¤¼ì²âÐ§ÂÊµÍ¡¢½á¹ûÊÜ¾­ÑéÓ°Ïì´ó£¬ÄÑÒÔÂú×ãÖÇÄÜ»¯Éú²úÏß¶ÔÖÊÁ¿Óë°²È«µÄË«ÖØÒªÇó¡£±¾ÏîÄ¿ÒÔ×Ô¶¯»¯»úÐµ»ú¹¹ÅäºÏÊÓ¾õ²âÁ¿ÌáÉý¼ì²âÐ§ÂÊÓë¾«¶È£¬È·±£Éú²ú¹ý³ÌÎÈ¶¨¿É¿Ø£¬½µµÍ²Ù×÷·çÏÕ£¬ÊµÏÖ·ûºÏ±ê×¼µÄÅúÁ¿½»¸¶¡£</p>
-                </div>
-            </div>
+        <!-- PURPOSE_START -->
+        <section class="card" style="margin-top:24px">
+            <h3>ç ”ç©¶ç›®çš„</h3>
+            <p>é’ˆå¯¹è½®æ¯‚æ£€æµ‹æµç¨‹ä¸­æ•ˆçŽ‡ä½Žã€é‡å¤åˆ¤å®šå¤šã€äººå·¥ä¾èµ–ç­‰ç—›ç‚¹ï¼Œæœ¬é¡¹ç›®æž„å»ºè‡ªåŠ¨åŒ–æ£€æµ‹ä¸Žæ•°æ®é©±åŠ¨çš„é—­çŽ¯ã€‚é€šè¿‡é«˜ç²¾åº¦é‡‡é›†ã€ç®—æ³•åˆ¤å®šå’Œè¾¹ç¼˜ååŒï¼Œå°†æ£€æµ‹ç»“æžœä¸Žäº§çº¿ã€ä»“å‚¨ã€ERP è”åŠ¨ï¼Œæå‡è´¨é‡ä¿éšœä¸Žå®‰å…¨æŽ§åˆ¶èƒ½åŠ›ã€‚</p>
         </section>
+        <!-- PURPOSE_END -->
 
-        <section class=\"card home-section\">
-            <div class=\"section-grid\">
-                <div class=\"section-media\">
-                    <img src=\"public/images/she_bei_jian_mo.png\" alt=\"ÂÖì±¼ì²â×°ÖÃ´´ÐÂÌØÉ«\">
-                </div>
-                <div class=\"section-text\">
-                    <h2>´´ÐÂÌØÉ«</h2>
-                    <ul class=\"feature-list\">
-                        <li>µ¥¹¤Î»Ä£¿é»¯¼¯³É£¬´«Êä¡¢¶¨Î»Óë¼ì²âÐ­Í¬ÔËÐÐ£¬½ÚÊ¡¿Õ¼ä²¢±ãÓÚÎ¬»¤À©Õ¹¡£</li>
-                        <li>ÖÐÐÄ¼Ð¾ßÊµÏÖÉý½µÓëÐý×ª¸´ºÏ¶¯×÷£¬±£ÕÏÔ²Ìø¶¯¼°¹Ø¼üÖáÏò³ß´ç²âÁ¿¾«¶È¡£</li>
-                        <li>²àÃæ¼Ð¾ß¾ß±¸¼Ð³ÖÓë·­×ªÄÜÁ¦£¬¸²¸Ç¶àÀàÐÍ¿×Î»¼°²àÏò³ß´ç¼ì²âÐèÇó¡£</li>
-                        <li>»úÆ÷ÊÓ¾õÁ÷³Ì²ÉÓÃ»Ò¶È»¯¡¢ÂË²¨¡¢ãÐÖµ¡¢±ßÔµÌáÈ¡Óë³ß´çÄâºÏ£¬Êä³ö¿É¿¿ÅÐ¶¨¡£</li>
-                        <li>¿ÉÊÓ»¯Æ½Ì¨Áª¶¯Í³¼Æ¡¢Ç÷ÊÆ¡¢¼à¿ØÓë¸æ¾¯Ä£¿é£¬ÊµÏÖÊý¾ÝÇý¶¯µÄÖÊÁ¿±Õ»·¡£</li>
-                        <li>»ùÓÚ PLC£¨S7-1200£©¿ØÖÆ¼Ü¹¹Á¬½Ó´«¸ÐÓëÖ´ÐÐµ¥Ôª£¬Ìá¹©°²È«»¥ËøÓëÔ¶³Ì¼à¿Ø¡£</li>
-                    </ul>
-                </div>
+        <!-- FEATURES_START -->
+        <section class="features card" style="margin-top:24px">
+            <div>
+                <h3>åˆ›æ–°ç‰¹è‰²</h3>
+                <ul class="feature-list">
+                    <li>æ¨¡å—åŒ–å¤¹å…·è¦†ç›–å¤šè§„æ ¼è½®æ¯‚ï¼Œæ¢åž‹æ— éœ€åœçº¿ã€‚</li>
+                    <li>åŒé€šé“æµ‹é‡å•å…ƒåŒæ­¥é‡‡é›†å¾„å‘ä¸Žå­”è·ï¼Œå®žçŽ°ç§’çº§åˆ¤å®šã€‚</li>
+                    <li>è§†è§‰ç®—æ³•èžåˆæ¿€å…‰ä¸Žç›¸æœºæ•°æ®ï¼Œç›®æ ‡è¯¯å·® â‰¤ 0.05 mmã€‚</li>
+                    <li>æ£€æµ‹ç»“æžœä¸Žä»“å‚¨ã€ERP è”åŠ¨ï¼Œå¼‚å¸¸è‡ªåŠ¨æµè½¬åˆ°è´£ä»»å·¥ä½ã€‚</li>
+                    <li>è¾¹ç¼˜æŽ¨ç†ç»“åˆäº‘ç«¯åˆ†æžï¼Œæ”¯æŒé¢„æµ‹æ€§ç»´æŠ¤ä¸Žäº§èƒ½ä¼˜åŒ–ã€‚</li>
+                </ul>
+            </div>
+            <div class="feature-gallery">
+                <img src="/images/bj-1.png" alt="å¤¹å…·æ¨¡å—">
+                <img src="/images/bj-2.png" alt="é€šé“æµ‹é‡">
+                <img src="/images/bj-3.png" alt="ç®—æ³•è¯†åˆ«">
+                <img src="/images/bj-4.png" alt="æ•°æ®è”åŠ¨">
             </div>
         </section>
+        <!-- FEATURES_END -->
     </main>
 
-    <footer class=\"site-footer\">
-        ? 2025 ÂÖì±¼ì²âÊý×ÖÂÏÉúÆ½Ì¨ ¡¤ All Rights Reserved.<span>ÏîÄ¿ºÏ×÷/½¨ÒéÇëÁªÏµ£ºcontact@example.com</span>
+    <footer class="site-footer">
+        Â© 2025 è½®æ¯‚æ£€æµ‹ç‰©è”ç½‘å¹³å° Â· All Rights Reserved.<span>é¡¹ç›®å’¨è¯¢ / åˆä½œè¯·è”ç³» contact@example.com</span>
     </footer>
 
-    <script src=\"js/app-shell.js\"></script>
+    <script src="js/app-shell.js"></script>
 </body>
 </html>
