5优化显示和管理员后台

--- a/Digital_Twin.html
+++ b/Digital_Twin.html
@@ -104,7 +104,7 @@
     </main>
 
     <footer class=\"site-footer\">
-        ? 2025 轮毂检测数字孪生平台 · All Rights Reserved.<span>项目合作/建议请联系：contact@example.com</span>
+        ? 2025 轮毂检测数字孪生平台 · All Rights Reserved.<span>项目合作/建议请联系：ruyiyao@stumail.ysu.edu.cn</span>
     </footer>
 
     <script src=\"js/app-shell.js\"></script>
