--- a/Home_Page.html
+++ b/Home_Page.html
@@ -59,7 +59,7 @@
     </main>
 
     <footer class="site-footer">
-        © 2025 轮毂检测物联网平台 · All Rights Reserved.<span>项目咨询 / 合作请联系 contact@example.com</span>
+        © 2025 轮毂检测物联网平台 · All Rights Reserved.<span>项目咨询 / 合作请联系 ruyiyao@stumail.ysu.edu.cn</span>
     </footer>
 
     <script src="js/app-shell.js"></script>
