6修改了主页页面的显示

--- a/Home_Page.html
+++ b/Home_Page.html
@@ -20,7 +20,7 @@
     <main class="page-content">
         <!-- HERO_START -->
         <section class="hero card">
-            <img class="hero-img" src="/images/gongchang.png" alt="工厂数字化场景">
+            <img class="hero-img" src="/images/technical-solution-roadmap.png" alt="Technical Solution Roadmap" title="Technical Solution Roadmap">
             <div class="hero-text">
                 <h2>项目概览</h2>
                 <p>项目聚焦轮毂尺寸与形状的全流程检测，整合自动上料、精准对中、视觉识别、数据追踪模块。系统采用模块化架构，支持快速切换规格，并通过数字孪生平台展示实时状态、趋势与追溯。</p>
