--- a/Visualize.html
+++ b/Visualize.html
@@ -21,7 +21,7 @@
         <section class=\"card visualize-hero\">
             <div class=\"card-header\">三维模型展示</div>
             <div class=\"hero-media\">
-                <img src=\"public/images/TianXiaWuShuang.png\" alt=\"轮毂检测三维模型展示\">
+                <img src=\"public/images/TianXiaWuShuang.png\" alt=\"Model Rendering\" title=\"TianXiaWuShuang\">
             </div>
         </section>
 
